<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Companies</class>
 <widget class="QMainWindow" name="Companies">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>500</width>
    <height>540</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>150</y>
      <width>500</width>
      <height>471</height>
     </rect>
    </property>
    <property name="currentIndex">
     <number>0</number>
    </property>
    <widget class="QWidget" name="pg_info">
     <widget class="QTableWidget" name="table_info_bor">
      <property name="geometry">
       <rect>
        <x>85</x>
        <y>40</y>
        <width>330</width>
        <height>90</height>
       </rect>
      </property>
     </widget>
     <widget class="QTableWidget" name="table_info_lent">
      <property name="geometry">
       <rect>
        <x>85</x>
        <y>190</y>
        <width>330</width>
        <height>90</height>
       </rect>
      </property>
     </widget>
     <widget class="QLabel" name="lb_borrowed">
      <property name="geometry">
       <rect>
        <x>215</x>
        <y>10</y>
        <width>70</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
       <string>borrowed</string>
      </property>
     </widget>
     <widget class="QLabel" name="lb_lent">
      <property name="geometry">
       <rect>
        <x>235</x>
        <y>160</y>
        <width>30</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
       <string>lent</string>
      </property>
     </widget>
    </widget>
    <widget class="QWidget" name="pg_trans">
     <widget class="QPushButton" name="btn_submit_trans">
      <property name="geometry">
       <rect>
        <x>130</x>
        <y>330</y>
        <width>93</width>
        <height>28</height>
       </rect>
      </property>
      <property name="text">
       <string>Submit</string>
      </property>
     </widget>
     <widget class="QPushButton" name="btn_reset_trans">
      <property name="geometry">
       <rect>
        <x>270</x>
        <y>330</y>
        <width>93</width>
        <height>28</height>
       </rect>
      </property>
      <property name="text">
       <string>Reset</string>
      </property>
     </widget>
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>80</x>
        <y>250</y>
        <width>331</width>
        <height>61</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout_2">
       <item row="0" column="0">
        <widget class="QLabel" name="lb_amount_trans">
         <property name="text">
          <string>Amount</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QLineEdit" name="line_trans_amt"/>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="lb_date_trans">
         <property name="text">
          <string>Due Date</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QDateTimeEdit" name="transfer_date">
         <property name="readOnly">
          <bool>false</bool>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QTableWidget" name="table_trans_lent">
      <property name="geometry">
       <rect>
        <x>80</x>
        <y>140</y>
        <width>330</width>
        <height>90</height>
       </rect>
      </property>
     </widget>
     <widget class="QLabel" name="lb_lent_2">
      <property name="geometry">
       <rect>
        <x>230</x>
        <y>120</y>
        <width>30</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
       <string>lent</string>
      </property>
     </widget>
     <widget class="QTableWidget" name="table_trans_bor">
      <property name="geometry">
       <rect>
        <x>80</x>
        <y>20</y>
        <width>330</width>
        <height>90</height>
       </rect>
      </property>
     </widget>
     <widget class="QLabel" name="lb_borrowed_2">
      <property name="geometry">
       <rect>
        <x>210</x>
        <y>0</y>
        <width>70</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
       <string>borrowed</string>
      </property>
     </widget>
    </widget>
    <widget class="QWidget" name="pg_pur">
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
        <x>215</x>
        <y>10</y>
        <width>70</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
       <string>Purchase</string>
      </property>
     </widget>
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>80</x>
        <y>40</y>
        <width>331</width>
        <height>118</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout_3">
       <property name="horizontalSpacing">
        <number>30</number>
       </property>
       <property name="verticalSpacing">
        <number>20</number>
       </property>
       <item row="0" column="0">
        <widget class="QLabel" name="lb_from_pur">
         <property name="text">
          <string>From</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QLineEdit" name="line_pur_from"/>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="lb_amount_pur">
         <property name="text">
          <string>Amount</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QLineEdit" name="line_pur_amt"/>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="lb_date_pur">
         <property name="text">
          <string>Due Date</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QDateTimeEdit" name="purchase_date">
         <property name="readOnly">
          <bool>false</bool>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>100</x>
        <y>180</y>
        <width>278</width>
        <height>30</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <property name="spacing">
        <number>90</number>
       </property>
       <item>
        <widget class="QPushButton" name="btn_submit_pur">
         <property name="text">
          <string>Submit</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="btn_reset_pur">
         <property name="text">
          <string>Reset</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
    <widget class="QWidget" name="pg_finance">
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
        <x>185</x>
        <y>10</y>
        <width>130</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
       <string>Finance from bank</string>
      </property>
     </widget>
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>80</x>
        <y>40</y>
        <width>331</width>
        <height>101</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout_4">
       <property name="horizontalSpacing">
        <number>40</number>
       </property>
       <property name="verticalSpacing">
        <number>30</number>
       </property>
       <item row="0" column="0">
        <widget class="QLabel" name="lb_amount_finance">
         <property name="text">
          <string>Amount</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QLineEdit" name="line_fin_amt"/>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="lb_date_fin">
         <property name="text">
          <string>Due date</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QDateTimeEdit" name="finance_date">
         <property name="readOnly">
          <bool>false</bool>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>110</x>
        <y>160</y>
        <width>268</width>
        <height>30</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_5">
       <property name="spacing">
        <number>80</number>
       </property>
       <item>
        <widget class="QPushButton" name="btn_submit_fin">
         <property name="text">
          <string>Submit</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="btn_reset_fin">
         <property name="text">
          <string>Reset</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
    <widget class="QWidget" name="pg_repay">
     <widget class="QPushButton" name="btn_ok_repay">
      <property name="geometry">
       <rect>
        <x>200</x>
        <y>210</y>
        <width>89</width>
        <height>25</height>
       </rect>
      </property>
      <property name="text">
       <string>OK</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
        <x>130</x>
        <y>10</y>
        <width>220</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
       <string>Click on a record to select.</string>
      </property>
     </widget>
     <widget class="QTableWidget" name="table_repay">
      <property name="geometry">
       <rect>
        <x>80</x>
        <y>30</y>
        <width>330</width>
        <height>161</height>
       </rect>
      </property>
     </widget>
    </widget>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>10</y>
      <width>461</width>
      <height>30</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="spacing">
      <number>5</number>
     </property>
     <item>
      <widget class="QPushButton" name="btn_info">
       <property name="focusPolicy">
        <enum>Qt::NoFocus</enum>
       </property>
       <property name="text">
        <string>Info</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="btn_transfer">
       <property name="text">
        <string>Transfer</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="btn_purchase">
       <property name="text">
        <string>Purchase</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="btn_finance">
       <property name="text">
        <string>Finance</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="btn_repay">
       <property name="text">
        <string>Repay</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="btn_quit">
       <property name="text">
        <string>Quit</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>80</x>
      <y>70</y>
      <width>331</width>
      <height>71</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
     <property name="horizontalSpacing">
      <number>40</number>
     </property>
     <property name="verticalSpacing">
      <number>15</number>
     </property>
     <item row="0" column="0">
      <widget class="QLabel" name="lb_total_b">
       <property name="text">
        <string>Total borrowed</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="line_basic_borr">
       <property name="readOnly">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="lb_total_l">
       <property name="text">
        <string>Total lent</string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="line_basic_lent">
       <property name="readOnly">
        <bool>true</bool>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>500</width>
     <height>26</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
